Basic Words Percentage in Conference Text

--- a/src/util/preprocess_files.ipynb
+++ b/src/util/preprocess_files.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 8,
    "id": "783184b9",
    "metadata": {},
    "outputs": [],
@@ -12,9 +12,465 @@
     "import math\n",
     "\n",
     "import spacy\n",
-    "# nlp = spacy.load(\"nl_core_news_sm\")\n",
+    "nlp = spacy.load(\"nl_core_news_sm\")\n",
     "import numpy as np\n",
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "f87a45b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from wordfreq import word_frequency, top_n_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "cfe13b0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s= 'Het beeldhouwwerk is gemaakt in opdracht van Johan Maurits voor de toenmalige overtuin van het Mauritshuis in Den Haag en bevond zich aan het einde van de zichtas van deze tuin.'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "35d104d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0fda50e3b2f44acba8aa5bdf2b72771b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/606 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "routekaart\n",
+      "coronamaatregeel\n",
+      "doornemen\n",
+      "duiding\n",
+      "induiken\n",
+      "viroloog\n",
+      "omt\n",
+      "catshuis\n",
+      "wiebes\n",
+      "kajsa\n",
+      "ollongren\n",
+      "jonge\n",
+      "voortschrijden\n",
+      "100%\n",
+      "wereldgezondheidsorganisatie\n",
+      "14\n",
+      "10\n",
+      "routekaart\n",
+      "besmettingscijfer\n",
+      "privésfeer\n",
+      "besmettingscijfer\n",
+      "500\n",
+      "ziekenhuisopname\n",
+      "ic-patiënt\n",
+      "r-getal\n",
+      "aansteken\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "580"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def process_text(text):\n",
+    "    return [token.lemma_ for token in nlp(text) if not(token.is_punct or token.is_space)]\n",
+    "\n",
+    "top_list = top_n_list('nl', 20000)\n",
+    "top_list_string = ' '.join(top_list)\n",
+    "freqwords = process_text(top_list_string) #  if not (token.is_stop or token.is_punct or token.is_space)\n",
+    "samplewords = process_text(sample_text)\n",
+    "\n",
+    "basic_word_count = 0\n",
+    "for word in tqdm(samplewords, total=(len(samplewords))):\n",
+    "    if word in freqwords:\n",
+    "        basic_word_count += 1\n",
+    "    else:\n",
+    "        print(word)\n",
+    "basic_word_count\n",
+    "\n",
+    "# words\n",
+    "# for i, word in enumerate(top_list):\n",
+    "#     if word != words[i]:\n",
+    "#         print(f'{words[i]} - {word}')\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "4f653e3c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "606\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'ja': 1,\n",
+       "         'goedenavond': 1,\n",
+       "         'het': 13,\n",
+       "         'is': 6,\n",
+       "         'vandaag': 4,\n",
+       "         '1': 3,\n",
+       "         'september': 2,\n",
+       "         'en': 18,\n",
+       "         'zoals': 1,\n",
+       "         'u': 3,\n",
+       "         'ongetwijfeld': 1,\n",
+       "         'nog': 4,\n",
+       "         'weten': 1,\n",
+       "         'de': 28,\n",
+       "         'laat': 2,\n",
+       "         'formeel': 1,\n",
+       "         'datum': 1,\n",
+       "         'op': 12,\n",
+       "         'onze': 2,\n",
+       "         'routekaart': 2,\n",
+       "         'van': 12,\n",
+       "         'coronamaatregeel': 1,\n",
+       "         'dat': 17,\n",
+       "         'direct': 1,\n",
+       "         'aanleiding': 1,\n",
+       "         'voor': 5,\n",
+       "         'deze': 1,\n",
+       "         'persconferentie': 2,\n",
+       "         'ik': 7,\n",
+       "         'zeggen': 9,\n",
+       "         'maar': 5,\n",
+       "         'meteen': 2,\n",
+       "         'we': 22,\n",
+       "         'hebben': 6,\n",
+       "         'geen': 1,\n",
+       "         'groot': 2,\n",
+       "         'of': 5,\n",
+       "         'onverwacht': 1,\n",
+       "         'nieuws': 1,\n",
+       "         'toch': 2,\n",
+       "         'denken': 2,\n",
+       "         'goed': 4,\n",
+       "         'stand': 1,\n",
+       "         'zaak': 1,\n",
+       "         'met': 8,\n",
+       "         'te': 10,\n",
+       "         'bespreken': 1,\n",
+       "         'want': 1,\n",
+       "         'er': 6,\n",
+       "         'zijn': 6,\n",
+       "         'natuurlijk': 1,\n",
+       "         'na': 4,\n",
+       "         'twee': 5,\n",
+       "         'week': 5,\n",
+       "         'geleden': 2,\n",
+       "         'wel': 3,\n",
+       "         'nodig': 1,\n",
+       "         'gebeuren': 2,\n",
+       "         'willen': 3,\n",
+       "         'vraag': 3,\n",
+       "         'doornemen': 1,\n",
+       "         'één': 3,\n",
+       "         'duiding': 1,\n",
+       "         'waar': 1,\n",
+       "         'staan': 2,\n",
+       "         'nu': 4,\n",
+       "         'ongeveer': 1,\n",
+       "         'een': 9,\n",
+       "         'half': 2,\n",
+       "         'jaar': 2,\n",
+       "         'begin': 1,\n",
+       "         'uitbraak': 1,\n",
+       "         'hoe': 2,\n",
+       "         'beoordelen': 1,\n",
+       "         'recent': 1,\n",
+       "         'cijfer': 3,\n",
+       "         'daar': 5,\n",
+       "         'zullen': 7,\n",
+       "         'kort': 1,\n",
+       "         'iets': 2,\n",
+       "         'over': 4,\n",
+       "         'wat': 5,\n",
+       "         'doen': 2,\n",
+       "         'komen': 1,\n",
+       "         'tijd': 2,\n",
+       "         'om': 6,\n",
+       "         'die': 4,\n",
+       "         'golf': 1,\n",
+       "         'blijven': 2,\n",
+       "         'voorbereiden': 1,\n",
+       "         'hugo': 3,\n",
+       "         'jong': 3,\n",
+       "         'zo': 3,\n",
+       "         'ingaan': 1,\n",
+       "         'voordat': 1,\n",
+       "         'induiken': 1,\n",
+       "         'beginnen': 1,\n",
+       "         'keer': 2,\n",
+       "         'duidelijk': 1,\n",
+       "         'uiteraard': 1,\n",
+       "         'iedereen': 1,\n",
+       "         'mag': 2,\n",
+       "         'stellen': 2,\n",
+       "         'bij': 5,\n",
+       "         'als': 3,\n",
+       "         'kabinet': 2,\n",
+       "         'ook': 5,\n",
+       "         'kritiek': 1,\n",
+       "         'sterk': 1,\n",
+       "         'gek': 1,\n",
+       "         'niet': 5,\n",
+       "         'volkomen': 1,\n",
+       "         'logisch': 1,\n",
+       "         'mens': 6,\n",
+       "         'beperking': 1,\n",
+       "         'zelf': 2,\n",
+       "         'onderzoek': 1,\n",
+       "         'uitgaan': 1,\n",
+       "         'vanuit': 1,\n",
+       "         'hun': 1,\n",
+       "         'eigen': 2,\n",
+       "         'discipline': 1,\n",
+       "         'vinden': 1,\n",
+       "         'viroloog': 1,\n",
+       "         'medicus': 1,\n",
+       "         'ons': 4,\n",
+       "         'adviseren': 1,\n",
+       "         'wij': 1,\n",
+       "         'besluiten': 1,\n",
+       "         'brengen': 1,\n",
+       "         'ver': 1,\n",
+       "         'dus': 3,\n",
+       "         'open': 1,\n",
+       "         'eerlijk': 1,\n",
+       "         'kunnen': 3,\n",
+       "         'beslissing': 1,\n",
+       "         'heen': 1,\n",
+       "         'heel': 1,\n",
+       "         'precies': 1,\n",
+       "         'moeten': 2,\n",
+       "         'kijken': 1,\n",
+       "         'virus': 1,\n",
+       "         'zich': 1,\n",
+       "         'gedragen': 1,\n",
+       "         'waarheid': 1,\n",
+       "         'manier': 2,\n",
+       "         'gevolg': 1,\n",
+       "         'corona': 1,\n",
+       "         'gaan': 2,\n",
+       "         'daarom': 1,\n",
+       "         'praten': 1,\n",
+       "         'buiten': 1,\n",
+       "         'omt': 1,\n",
+       "         'deskundig': 1,\n",
+       "         'meer': 3,\n",
+       "         'vanmiddag': 1,\n",
+       "         'catshuis': 1,\n",
+       "         'vier': 1,\n",
+       "         'gesprek': 1,\n",
+       "         'dit': 1,\n",
+       "         'samen': 1,\n",
+       "         'eric': 1,\n",
+       "         'wiebes': 1,\n",
+       "         'kajsa': 1,\n",
+       "         'ollongren': 1,\n",
+       "         'helpen': 1,\n",
+       "         'echt': 1,\n",
+       "         'jonge': 1,\n",
+       "         'volgen': 1,\n",
+       "         'online': 1,\n",
+       "         'sessie': 1,\n",
+       "         'organiseren': 1,\n",
+       "         'zoveel': 2,\n",
+       "         'mogelijk': 2,\n",
+       "         'idee': 1,\n",
+       "         'kritisch': 1,\n",
+       "         'horen': 1,\n",
+       "         'werken': 2,\n",
+       "         'passen': 1,\n",
+       "         'steeds': 3,\n",
+       "         'basis': 1,\n",
+       "         'voortschrijden': 1,\n",
+       "         'inzicht': 1,\n",
+       "         '100%': 1,\n",
+       "         'kennis': 2,\n",
+       "         'leren': 1,\n",
+       "         'per': 4,\n",
+       "         'dag': 4,\n",
+       "         'maand': 1,\n",
+       "         'beleid': 1,\n",
+       "         'daarop': 1,\n",
+       "         'nemen': 1,\n",
+       "         'in': 4,\n",
+       "         'maart': 1,\n",
+       "         'bijvoorbeeld': 1,\n",
+       "         'gezag': 1,\n",
+       "         'wereldgezondheidsorganisatie': 1,\n",
+       "         'aan': 3,\n",
+       "         'gemiddeld': 1,\n",
+       "         '2': 1,\n",
+       "         'ic': 1,\n",
+       "         'liggen': 1,\n",
+       "         'blijken': 3,\n",
+       "         'bijna': 1,\n",
+       "         '3': 1,\n",
+       "         'ander': 2,\n",
+       "         'voorbeeld': 1,\n",
+       "         '14': 1,\n",
+       "         'quarantaine': 1,\n",
+       "         'gaandeweg': 1,\n",
+       "         'naar': 1,\n",
+       "         '10': 1,\n",
+       "         'voorjaar': 1,\n",
+       "         'door': 1,\n",
+       "         'gedrag': 1,\n",
+       "         'werd': 1,\n",
+       "         'inhalen': 1,\n",
+       "         'waardoor': 1,\n",
+       "         'zomer': 1,\n",
+       "         'ineens': 1,\n",
+       "         'stap': 1,\n",
+       "         'zetten': 1,\n",
+       "         'toen': 2,\n",
+       "         'juist': 1,\n",
+       "         'weer': 3,\n",
+       "         'even': 1,\n",
+       "         'rem': 1,\n",
+       "         'trappen': 1,\n",
+       "         'zien': 2,\n",
+       "         'besmettingscijfer': 2,\n",
+       "         'flink': 1,\n",
+       "         'oploop': 1,\n",
+       "         'vooral': 1,\n",
+       "         'privésfeer': 1,\n",
+       "         'ontvang': 1,\n",
+       "         'nou': 1,\n",
+       "         'dan': 1,\n",
+       "         '6': 1,\n",
+       "         'thuis': 2,\n",
+       "         'registreren': 1,\n",
+       "         'je': 1,\n",
+       "         'gast': 1,\n",
+       "         'horeca': 1,\n",
+       "         'werk': 1,\n",
+       "         'stabiel': 2,\n",
+       "         'zelfs': 1,\n",
+       "         'licht': 1,\n",
+       "         'dalen': 1,\n",
+       "         'zitten': 2,\n",
+       "         'plateau': 1,\n",
+       "         'rond': 1,\n",
+       "         '500': 1,\n",
+       "         'besmetting': 1,\n",
+       "         'aantal': 1,\n",
+       "         'ziekenhuisopname': 1,\n",
+       "         'ic-patiënt': 1,\n",
+       "         'niveau': 1,\n",
+       "         'zorg': 1,\n",
+       "         'aankunnen': 1,\n",
+       "         'beroemd': 1,\n",
+       "         'r-getal': 1,\n",
+       "         'hoeveel': 1,\n",
+       "         'ieder': 1,\n",
+       "         'besmet': 1,\n",
+       "         'persoon': 1,\n",
+       "         'aansteken': 1,\n",
+       "         'sinds': 1,\n",
+       "         'net': 1,\n",
+       "         'onder': 1})"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "sample_text = '''\n",
+    "Ja goedenavond. Het is vandaag 1 september. En zoals u ongetwijfeld nog weet: de laatste formele datum op onze routekaart van coronamaatregelen. Dat is de directe aanleiding voor deze persconferentie. Ik zeg maar meteen: we hebben geen groot of onverwacht nieuws vandaag. Toch denken we dat het goed is de stand van zaken met u te bespreken, want er is natuurlijk na de laatste persconferentie van twee weken geleden wel het nodige gebeurd.\n",
+    "We willen vandaag twee vragen met u doornemen. Ten eerste de duiding: waar staan we nu, ongeveer een half jaar na het begin van de uitbraak? Hoe beoordelen we de recente cijfers? Daar zal ik kort iets over zeggen. Ten tweede, wat doen we nu en de komende tijd om die tweede golf voor te blijven en er toch op voorbereid te zijn? Daar zal Hugo de Jonge zo meteen op ingaan.\n",
+    "Maar voordat ik de cijfers induik, wil ik om te beginnen een keer duidelijk gezegd hebben dat uiteraard iedereen vragen mag stellen bij wat we als kabinet doen en daar ook kritiek op mag hebben. Sterker nog: het zou gek zijn als dat niet zou gebeuren. Het is volkomen logisch dat mensen na een half jaar van beperkingen zelf op onderzoek uitgaan. Of dat er mensen zijn die vanuit hun eigen discipline iets vinden over wat virologen en medici ons adviseren en wat wij als kabinet besluiten. Dat brengt ons verder en daar staan we dus open voor. Ik zeg er wel eerlijk bij: we kunnen bij onze beslissingen niet om de cijfers heen en we zullen ook heel precies moeten blijven kijken hoe het virus zich gedraagt. Maar dat wil niet zeggen dat er maar één waarheid is over de beste manier om met de gevolgen van corona om te gaan. Daarom praten we ook buiten het OMT met deskundigen. En daar zal Hugo de Jonge zo nog meer over zeggen. Ik had vanmiddag op het Catshuis een vierde gesprek met jongeren, dit keer samen met Eric Wiebes en Kajsa Ollongren. Dat helpt ons echt. En dus gaan Hugo de Jonge en ik volgende week een online sessie organiseren om van zoveel mogelijk mensen goede ideeën en kritische vragen te horen.\n",
+    "Die manier van werken past bij wat we steeds hebben gezegd. We werken op basis van voortschrijdend inzicht. Niet met 100% van de kennis, maar wel met steeds meer kennis. We leren per dag, per week, per maand en we stellen het beleid daarop bij. Zo namen we in maart bijvoorbeeld op gezag van de Wereldgezondheidsorganisatie aan dat mensen gemiddeld 2 weken op de IC zouden liggen. Dat bleken er bijna 3 te zijn. Een ander voorbeeld: 14 dagen quarantaine bleek gaandeweg naar 10 dagen te kunnen. Of denk aan de routekaart zelf, die in het voorjaar steeds door ons eigen goede gedrag werd ingehaald, waardoor we voor de zomer ineens grote stappen konden zetten. Of aan twee weken geleden, toen juist bleek dat we weer even op de rem moesten trappen.\n",
+    "We zagen toen de besmettingscijfers nog flink oplopen, vooral in de privésfeer. En dus hebben we gezegd: ontvang nou niet meer dan 6 mensen thuis, registreer je gasten in de horeca en werk ook na 1 september zoveel mogelijk thuis. Nu zien we dat de besmettingscijfers weer stabiel zijn, of zelfs licht dalen. We zitten nu op een plateau van rond de 500 besmettingen per dag en het aantal ziekenhuisopnamen en ic-patiënten is ook stabiel op een niveau dat de zorg aankan. Dat beroemde R-getal dat zegt hoeveel andere mensen iedere besmette persoon aansteekt, zat vandaag voor het eerst sinds een tijdje weer net onder de 1.\n",
+    "'''\n",
+    "print(len(process_text(sample_text)))\n",
+    "Counter(samplewords)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "79fd501a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.91e-06\n",
+      "1.95e-06\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1.58e-06"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top_list[-1]\n",
+    "print(word_frequency('decoraties', 'nl'))\n",
+    "print(word_frequency(top_list[-100], 'nl'))\n",
+    "word_frequency('aansteken', 'nl')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b35d68f8",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "----------------------------------\n",
+    "\n"
    ]
   },
   {
