Fix working directorry issues

--- a/src/analyses/TFidf visualisation.ipynb
+++ b/src/analyses/TFidf visualisation.ipynb
@@ -10,12 +10,27 @@
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "# Used for tfidf\n",
     "import spacy\n",
     "from tqdm.notebook import tqdm\n",
     "import os\n",
     "\n",
-    "nlp = spacy.load(\"nl_core_news_sm\")"
+    "nlp = spacy.load(\"nl_core_news_sm\")\n",
+    "from util.conferences import get_conference_data, correct_cwd"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "TF_IDF_CSV_PATH = 'output/tf_idf.csv'\n",
+    "CORPUS_PATH = 'output/corpus.csv'"
    ],
    "metadata": {
     "collapsed": false,
@@ -27,6 +42,20 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "outputs": [],
+   "source": [
+    "correct_cwd()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -69,7 +98,7 @@
     "    corpus.set_index('words', inplace=True)\n",
     "    corpus.fillna(0, inplace=True)\n",
     "\n",
-    "    corpus.to_csv('output/corpus.csv')\n",
+    "    corpus.to_csv(CORPUS_PATH)\n",
     "\n",
     "    tf_idf = {k: [] for k in corpus.columns}\n",
     "\n",
@@ -86,17 +115,32 @@
     "    tf_idf_df = pd.DataFrame.from_dict(tf_idf)\n",
     "    tf_idf_df.set_index(corpus.index, inplace=True)\n",
     "\n",
-    "    tf_idf_df.to_csv(('output/tf_idf.csv'))\n",
+    "    tf_idf_df.to_csv(TF_IDF_CSV_PATH)\n",
     "\n",
     "    print(\"Saved results to 'output/corpus.csv' and 'output/tf_idf.csv'\")\n"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [],
+   "source": [
+    "if not os.path.isfile(TF_IDF_CSV_PATH):\n",
+    "    calculate_tfidf(get_conference_data())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [
-    "if os.path"
+    "tf_idf_matrix = pd.read_csv(TF_IDF_CSV_PATH)"
    ],
    "metadata": {
     "collapsed": false,
@@ -108,9 +152,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "name": "python3",
    "language": "python",
-   "name": "python3"
+   "display_name": "Python 3 (ipykernel)"
   },
   "language_info": {
    "codemirror_mode": {
