Fix spacy notebook

--- a/src/analyses/spacy.ipynb
+++ b/src/analyses/spacy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 108,
    "metadata": {
     "collapsed": true
    },
@@ -13,12 +13,15 @@
     "nlp = spacy.load(\"nl_core_news_lg\")\n",
     "from util.conferences import get_conference_data, correct_cwd, get_sentences\n",
     "from util.infections import get_infection_data\n",
-    "import datetime as dt\n"
+    "import datetime as dt\n",
+    "from tqdm.notebook import tqdm\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 109,
    "outputs": [],
    "source": [
     "correct_cwd()"
@@ -32,27 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "outputs": [],
-   "source": [
-    "def tokenize_texts(texts):\n",
-    "    processed_texts = [text for text in nlp.pipe(texts, disable=[\"ner\", \"parser\"])]\n",
-    "    tokenized_texts_sw = []\n",
-    "    for processed_text in processed_texts:\n",
-    "        tokenized_text_sw = [word.text.lower() for word in processed_text if not word.is_stop]\n",
-    "        tokenized_texts_sw.append(tokenized_text_sw)\n",
-    "    return tokenized_texts_sw"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 111,
    "outputs": [],
    "source": [
     "rutte_data, de_jonge_data = get_conference_data(include_journalist_questions=True)\n",
@@ -68,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 112,
    "outputs": [],
    "source": [
     "rutte_sentences = [get_sentences(rutte_text) for rutte_text in rutte_texts]\n",
@@ -85,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 113,
    "outputs": [],
    "source": [
     "def stam_ww(token_tags):\n",
@@ -101,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 114,
    "outputs": [],
    "source": [
     "def has_imperative_form(sentence: str):\n",
@@ -121,15 +104,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 115,
    "outputs": [
     {
      "data": {
-      "text/plain": "0it [00:00, ?it/s]",
+      "text/plain": "  0%|          | 0/60 [00:00<?, ?it/s]",
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "4d51d1dc3aba4641b42d4ba44f6d3376"
+       "model_id": "d63c26e9f3254099a516ebd9a3fd9c51"
       }
      },
      "metadata": {},
@@ -241,17 +224,16 @@
     }
    ],
    "source": [
-    "from tqdm.notebook import tqdm\n",
-    "\n",
     "relative_proportions = []\n",
     "\n",
-    "for rut, dejonge in tqdm(zip(rutte_sentences, de_jonge_sentences)):\n",
+    "for rut_doc, de_jonge_doc in tqdm(list(zip(rutte_sentences, de_jonge_sentences))):\n",
+    "    doc = rut_doc + de_jonge_doc\n",
     "    count = 0\n",
-    "    for sentence in rut + dejonge:\n",
+    "    for sentence in doc:\n",
     "        if has_imperative_form(sentence):\n",
     "            count += 1\n",
     "            print(sentence)\n",
-    "    relative_proportions.append(count / (len(rut) + len(dejonge)))"
+    "    relative_proportions.append(count / len(doc))"
    ],
    "metadata": {
     "collapsed": false,
@@ -262,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 116,
    "outputs": [],
    "source": [
     "# from https://matplotlib.org/devdocs/gallery/subplots_axes_and_figures/two_scales.html\n",
@@ -296,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 117,
    "outputs": [
     {
      "data": {
@@ -310,11 +292,9 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "x = dates\n",
     "y = relative_proportions\n",
-    "plt.plot(x,  y)\n",
+    "plt.plot(x, y)\n",
     "plt.xticks(rotation=45)\n",
     "plt.show()"
    ],
@@ -327,14 +307,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 118,
    "outputs": [
     {
      "data": {
       "text/plain": "           date  total_infections  new_infections  new_infection_ma\n0    2020-03-13               804             804               NaN\n1    2020-03-14               959             155               NaN\n2    2020-03-15              1135             176               NaN\n3    2020-03-16              1413             278            353.25\n4    2020-03-17              1705             292            225.25\n..          ...               ...             ...               ...\n679  2022-01-21           3778287           57471          41734.00\n680  2022-01-22           3824344           46057          45412.00\n681  2022-01-23           3889669           65325          52193.25\n682  2022-01-24           3954299           64630          58370.75\n683  2022-01-25           4008459           54160          57543.00\n\n[684 rows x 4 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>date</th>\n      <th>total_infections</th>\n      <th>new_infections</th>\n      <th>new_infection_ma</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2020-03-13</td>\n      <td>804</td>\n      <td>804</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2020-03-14</td>\n      <td>959</td>\n      <td>155</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2020-03-15</td>\n      <td>1135</td>\n      <td>176</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2020-03-16</td>\n      <td>1413</td>\n      <td>278</td>\n      <td>353.25</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2020-03-17</td>\n      <td>1705</td>\n      <td>292</td>\n      <td>225.25</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>679</th>\n      <td>2022-01-21</td>\n      <td>3778287</td>\n      <td>57471</td>\n      <td>41734.00</td>\n    </tr>\n    <tr>\n      <th>680</th>\n      <td>2022-01-22</td>\n      <td>3824344</td>\n      <td>46057</td>\n      <td>45412.00</td>\n    </tr>\n    <tr>\n      <th>681</th>\n      <td>2022-01-23</td>\n      <td>3889669</td>\n      <td>65325</td>\n      <td>52193.25</td>\n    </tr>\n    <tr>\n      <th>682</th>\n      <td>2022-01-24</td>\n      <td>3954299</td>\n      <td>64630</td>\n      <td>58370.75</td>\n    </tr>\n    <tr>\n      <th>683</th>\n      <td>2022-01-25</td>\n      <td>4008459</td>\n      <td>54160</td>\n      <td>57543.00</td>\n    </tr>\n  </tbody>\n</table>\n<p>684 rows × 4 columns</p>\n</div>"
      },
-     "execution_count": 87,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 119,
    "outputs": [
     {
      "data": {
