--- a/src/analyses/sentiment.ipynb
+++ b/src/analyses/sentiment.ipynb
@@ -2,59 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [
-    {
-     "data": {
-      "text/plain": "Downloading:   0%|          | 0.00/878k [00:00<?, ?B/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "85f49f77a17540ada9ea6828197e1273"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Downloading:   0%|          | 0.00/446k [00:00<?, ?B/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "9ec6c8add6be44049d9c869c88431df7"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Downloading:   0%|          | 0.00/504 [00:00<?, ?B/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "40cb11308b464748a24500d8661656f7"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Downloading:   0%|          | 0.00/476M [00:00<?, ?B/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "053ef742b9044246924d0cb355230609"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -62,7 +14,7 @@
       "Some weights of the model checkpoint at pdelobelle/robBERT-base were not used when initializing RobertaForSequenceClassification: ['pooler.dense.weight', 'pooler.dense.bias']\n",
       "- This IS expected if you are initializing RobertaForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing RobertaForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
-      "Some weights of RobertaForSequenceClassification were not initialized from the model checkpoint at pdelobelle/robBERT-base and are newly initialized: ['classifier.out_proj.weight', 'classifier.dense.bias', 'classifier.dense.weight', 'classifier.out_proj.bias']\n",
+      "Some weights of RobertaForSequenceClassification were not initialized from the model checkpoint at pdelobelle/robBERT-base and are newly initialized: ['classifier.dense.weight', 'classifier.out_proj.bias', 'classifier.dense.bias', 'classifier.out_proj.weight']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
      ]
     }
@@ -75,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "from transformers import pipeline\n",
@@ -90,19 +42,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
-      "text/plain": "[{'label': 'LABEL_0', 'score': 0.6212549209594727}]"
+      "text/plain": "[{'label': 'LABEL_1', 'score': 0.5676566958427429}]"
      },
-     "execution_count": 40,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "classifier('leuk')"
+    "classifier('ik vind het leuk')"
    ],
    "metadata": {
     "collapsed": false,
@@ -113,19 +65,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
-      "text/plain": "[{'label': 'LABEL_0', 'score': 0.6307328343391418}]"
+      "text/plain": "[{'label': 'LABEL_1', 'score': 0.5538917183876038}]"
      },
-     "execution_count": 41,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "classifier('stom')"
+    "classifier('ik vind het stom')"
    ],
    "metadata": {
     "collapsed": false,
