Work on Basic Word Usage (by using comparison with NOS texts)

--- a/src/analyses/Basic Word Usage.ipynb
+++ b/src/analyses/Basic Word Usage.ipynb
@@ -211,8 +211,237 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
+   "id": "1a123f92",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from bs4 import BeautifulSoup\n",
+    "import pathlib\n",
+    "import requests\n",
+    "from tqdm.notebook import tqdm\n",
+    "import os\n",
+    "\n",
+    "pd.set_option('display.max_rows', None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
    "id": "067ed985",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://nos.nl/nieuws/archief/2020-05-25\n",
+    "\n",
+    "ARTICLE_OUTPUT_FOLDER = '../input/articles'\n",
+    "NOS_ARCHIVE_URL = 'https://nos.nl/nieuws/archief/'\n",
+    "NOS_URL = 'https://nos.nl'\n",
+    "\n",
+    "\n",
+    "#response = requests.get(NOS_ARCHIVE_URL)\n",
+    "\n",
+    "#soup = BeautifulSoup(response.content, \"html.parser\")\n",
+    "\n",
+    "#urls = []\n",
+    "#for page_content in soup.findAll('a', href=True):\n",
+    "#        urls.append(page_content['href'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "d3263717",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "urls = pd.Series(urls)\n",
+    "urls = urls[urls.str.contains('/artikel/')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "a03002ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/artikel/2332717-politiemol-mark-m-krijgt-ook-in-hoger-beroep-vijf-jaar-cel'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "urls.iloc[27]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "e1a06e7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import datetime\n",
+    "\n",
+    "datelist = pd.date_range('01/04/2020', periods=100).tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "e4ad34f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'26-01-2022'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datetime.today().strftime('%d-%m-%Y')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "454e7b24",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['2020-04-01',\n",
+       " '2020-04-02',\n",
+       " '2020-04-03',\n",
+       " '2020-04-04',\n",
+       " '2020-04-05',\n",
+       " '2020-04-06',\n",
+       " '2020-04-07',\n",
+       " '2020-04-08',\n",
+       " '2020-04-09',\n",
+       " '2020-04-10',\n",
+       " '2020-04-11',\n",
+       " '2020-04-12',\n",
+       " '2020-04-13',\n",
+       " '2020-04-14',\n",
+       " '2020-04-15',\n",
+       " '2020-04-16',\n",
+       " '2020-04-17',\n",
+       " '2020-04-18',\n",
+       " '2020-04-19',\n",
+       " '2020-04-20',\n",
+       " '2020-04-21',\n",
+       " '2020-04-22',\n",
+       " '2020-04-23',\n",
+       " '2020-04-24',\n",
+       " '2020-04-25',\n",
+       " '2020-04-26',\n",
+       " '2020-04-27',\n",
+       " '2020-04-28',\n",
+       " '2020-04-29',\n",
+       " '2020-04-30']"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dates = [x.strftime('%Y-%m-%d') for x in pd.date_range(start = '2020-04-01',end='2020-04-30', freq='D')] # datetime.today()\n",
+    "dates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b00cadc5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_article_urls(dates):\n",
+    "    article_urls_dict = {}\n",
+    "    \n",
+    "    for date in tqdm(dates, total=len(dates)):\n",
+    "        urls = []\n",
+    "        response = requests.get(NOS_ARCHIVE_URL+date)\n",
+    "        soup = BeautifulSoup(response.content, \"html.parser\")\n",
+    "        \n",
+    "        for page_content in soup.findAll('a', href=True):\n",
+    "                urls.append(page_content['href'])\n",
+    "        urls = pd.Series(urls)\n",
+    "        urls = urls[urls.str.contains('/artikel/')]\n",
+    "        urls = NOS_URL + urls\n",
+    "        article_urls_dict[date] = list(urls)\n",
+    "        \n",
+    "    return(article_urls_dict)\n",
+    "\n",
+    "article_urls = get_article_urls(dates)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "id": "61eef17a",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4fede2c50999401b9a6669b485869811",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/37 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "def get_article_text(article_url):\n",
+    "    file_name = f\"{ARTICLE_OUTPUT_FOLDER}/{article_url[article_url.find('/artikel/')+9:]}\"\n",
+    "    \n",
+    "    if not os.path.exists(file_name):\n",
+    "        response_text = requests.get(article_url)\n",
+    "        soup = BeautifulSoup(response_text.content, \"html.parser\")\n",
+    "        raw_paragraphs = soup.find_all('p', class_=\"text_3v_J6Y0G\")\n",
+    "        texts = [p.get_text() for p in raw_paragraphs]\n",
+    "\n",
+    "        with open(file_name, \"w\", encoding='utf-8') as txt_file:\n",
+    "            txt_file.write('\\n'.join(texts))\n",
+    "\n",
+    "pathlib.Path(ARTICLE_OUTPUT_FOLDER).mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "i = 0\n",
+    "for x in tqdm(article_urls['2020-04-01'], total=len(article_urls['2020-04-01'])):\n",
+    "    get_article_text(x)\n",
+    "    i += 1\n",
+    "    if i == 5:\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a3894f00",
    "metadata": {},
    "outputs": [],
    "source": []
