--- a/src/analyses/NOS Comparison.ipynb
+++ b/src/analyses/NOS Comparison.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "id": "91cece1a",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "id": "5c029b7b",
    "metadata": {},
    "outputs": [],
@@ -51,13 +51,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "id": "c8635de7",
    "metadata": {},
    "outputs": [],
    "source": [
     "# get list of formatted dates\n",
-    "dates = [x.strftime('%Y-%m-%d') for x in pd.date_range(start = '2020-04-01',end='2020-04-30', freq='D')] # datetime.today()"
+    "dates = [x.strftime('%Y-%m-%d') for x in pd.date_range(start = '2020-04-01',end='2020-05-30', freq='D')] # datetime.today()"
    ]
   },
   {
@@ -116,6 +116,50 @@
    "metadata": {},
    "source": [
     "### Get Article Texts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "5e1a975d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_ 1\n",
+      "== 1\n",
+      "== 2\n",
+      "== 3\n",
+      "_ 2\n",
+      "== 1\n",
+      "== 2\n",
+      "_ 3\n",
+      "== 1\n",
+      "== 2\n",
+      "== 3\n",
+      "__\n"
+     ]
+    }
+   ],
+   "source": [
+    "l1=['1', '2', '3']\n",
+    "l2=l1\n",
+    "i=0\n",
+    "for x in l1:\n",
+    "    print('_', x)\n",
+    "    for y in l2:\n",
+    "        i+=1\n",
+    "        print('==', y)\n",
+    "        #print('--->', i)\n",
+    "        if i == 5:\n",
+    "            break\n",
+    "    else:\n",
+    "        continue\n",
+    "    break\n",
+    "    \n",
+    "print('__')"
    ]
   },
   {
@@ -627,6 +671,58 @@
    "source": [
     "file_count = sum(len(files) for _, _, files in os.walk('../input/articles/'))\n",
     "print(file_count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "ceba8e2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['2020-05-01',\n",
+       " '2020-05-02',\n",
+       " '2020-05-03',\n",
+       " '2020-05-04',\n",
+       " '2020-05-05',\n",
+       " '2020-05-06',\n",
+       " '2020-05-07',\n",
+       " '2020-05-08',\n",
+       " '2020-05-09',\n",
+       " '2020-05-10',\n",
+       " '2020-05-11',\n",
+       " '2020-05-12',\n",
+       " '2020-05-13',\n",
+       " '2020-05-14',\n",
+       " '2020-05-15',\n",
+       " '2020-05-16',\n",
+       " '2020-05-17',\n",
+       " '2020-05-18',\n",
+       " '2020-05-19',\n",
+       " '2020-05-20',\n",
+       " '2020-05-21',\n",
+       " '2020-05-22',\n",
+       " '2020-05-23',\n",
+       " '2020-05-24',\n",
+       " '2020-05-25',\n",
+       " '2020-05-26',\n",
+       " '2020-05-27',\n",
+       " '2020-05-28',\n",
+       " '2020-05-29',\n",
+       " '2020-05-30']"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "article_files = os.listdir('../input/articles')\n",
+    "[x for x in dates if x not in article_files]"
    ]
   },
   {
